syntax = "proto3";
package sagaprocessorapis.v1;
option go_package = "github.com/awe76/saga/processor/sagaprocessorapis/v1";

import "sagatransactionapis/v1/sagatransaction.proto";

message ExecuteWorkflowRequest {
  sagatransactionapis.v1.Workflow workflow = 1;
  string payload = 2;
}

message ExecuteWorkflowResponse {
  sagatransactionapis.v1.State state = 1;
}

service SagaProcessorService {
  rpc ExecuteWorkflow(ExecuteWorkflowRequest) returns (ExecuteWorkflowResponse);
}